src/test/deca/syntax/valid/class/18_plusieurs_classes_prog_simple.deca
/*
	Description: tests plusieurs class un main

	Resultat: syntaxiquement correct

	Date:20/1/2020
	

*/
class a extends b {

	int lala=1;
}


class b{

	int lala=1;
}


class c extends a{
 	
	 int lala=pasimportance;

}


{



	print(lala);

}
