src/test/deca/syntax/invalid/class/decl_methode_sans_type.deca
/*
	Description: decl methode sans types

	Resultat syntaxiquement invalid

	Date: 20/01/2020

*/



class a extends b{
	

	hello( ){
		print("hello");
	}
	
}
